# simconnect_rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.hpp
sim_connect_bindings/: Cargo.toml  build.rs
sim_connect_bindings/src/: lib.rs
sim_connect_data/: Cargo.toml
sim_connect_data/src/: internals.rs  lib.rs  recv_data.rs  sim_event_args.rs  sim_events.rs  sim_input_events.rs  sim_units.rs  sim_var_types.rs  sim_vars.rs
sim_connect_macros/: Cargo.toml
sim_connect_macros/src/: lib.rs
sim_connect_sys/: Cargo.toml  README.md  build.rs
src/: lib.rs  main.rs
src/sim_connect/: mod.rs  recv_data.rs  sim_events.rs  sim_units.rs  sim_var_types.rs  sim_vars.rs
