[package]
name = "sim_connect_rs"
version = "0.6.1"
edition = "2021"
license-file = "./LICENSE"
repository = "https://github.com/dbidwell94/simconnect_rs"
homepage = "https://github.com/dbidwell94/simconnect_rs"

[lib]

[features]
derive = []
async = []
static_link = ["sim_connect_sys/static_link"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70" }
sim_connect_macros = { version = "0.1.0" }
sim_connect_sys = { version = "0.1.0" }
sim_connect_data = { version = "0.1", path = "./sim_connect_data" }
