[package]
name = "sim_connect_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim_connect_bindings = { path = "../sim_connect_bindings" }
num_enum = { version = "0.6.0" }
anyhow = { version = "1.0.70" }
semver = { version = "1.0.17" }