[package]
name = "sim_connect_data"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/dbidwell94/simconnect_rs/tree/master/sim_connect_data"
license = "MIT"
description = "A crate containing Rust-esk data types for use with SimConnect via sim_connect_rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sim_connect_sys = { path = "../sim_connect_sys", version = "0.2.0" }
sim_connect_macros = { version = "0.1.0" }
num_enum = { version = "0.6.0" }
anyhow = { version = "1.0.70" }
semver = { version = "1.0.17" }