[package]
name = "sim_connect_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.91", features = ["full"] }
quote = { version = "1.0.26" }
darling = { version = "0.14.4" }
sim_connect_data = { path = "../sim_connect_data" }
