[package]
name = "sim_connect_macros"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/dbidwell94/simconnect_rs/tree/master/sim_connect_macros"
license = "MIT"
description = "Macros for use internally with sim_connect_rs and for use as helpers when using sim_connect_rs"

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.91", features = ["full"] }
quote = { version = "1.0.26" }
darling = { version = "0.14.4" }
proc-macro2 = {version = "1.0.56"}
