[package]
name = "sim_connect_sys"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/dbidwell94/simconnect_rs/tree/master/sim_connect_sys"
license-file = "./LICENSE"
description = "Rust bindings for SimConnect for use with Microsoft Flight Simulator"

[lib]
crate-type = ["dylib"]

links = "SimConnect"

[features]
static_link = []

[dependencies]

[build-dependencies]
bindgen = { version = "0.64.0" }